...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_profile"
            style="@style/Widget.TermLink.SettingsButton.Outlined"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_edit_profile"
            app:rippleColor="@color/sessions_primary"
            app:strokeColor="@color/sessions_primary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_profile"
            style="@style/Widget.TermLink.SettingsButton.DangerText"
            android:layout_width="0dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:text="@string/settings_delete_profile" />
    </LinearLayout>
...
